[package]
name = "clip_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"]}
serde = { version = "1.0.192", features = ["derive"]}
thirtyfour = "0.31.0"
tokio = {version = "1.34.0", features = ["full"] }
twitch-irc = "5.0.1"
